# coderev-agents

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  OVERHAUL.md  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  demo.py  provenance.json  pyproject.toml  sarif_output.json  sbom.json  smoke_test.sh
.github/workflows/: ci.yml  demo-smoke.yml
configs/: sweep.yaml  train_qlora.yaml
deploy/k8s/: deployment.yaml
deploy/prometheus/: alerts.yaml
docs/: ML_SECURITY_AUDIT_2026.md  secret-rotation.md  security-showcase.html
examples/: README.md
sample_repo/: vulnerable.py
scripts/: generate_model_manifest.py  publish_hf.py  register_model.py
src/coderev/: __init__.py  config.py
src/coderev/agents/: graph.py  injection_classifier.py  model_loader.py  nodes.py  output_guard.py  output_schemas.py  trust_boundary.py
src/coderev/api/: main.py
src/coderev/inference/: speculative.py
src/coderev/monitoring/: drift.py
src/coderev/security/: prompt_injection_guard.py
src/coderev/tools/: bandit.py
src/coderev/training/: data_schema.py  lineage.py  pii_redaction.py  quantize.py  train_qlora.py
tests/: test_adversarial.py  test_graph.py  test_trust_boundary.py
