[project]
name = "coderev-agents"
version = "0.3.1"
description = "Multi-agent code review system with fine-tuned CodeLlama and LangGraph orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Pooja Kiran", email = "poojakira@users.noreply.github.com"}]
keywords = ["llm", "fine-tuning", "multi-agent", "code-review", "langgraph"]

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "langgraph==0.2.60",
    "langchain-core==0.3.28",
    "langchain-openai==0.2.14",
    "openai==1.58.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "structlog==24.4.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
train = [
    "unsloth[colab-new]==2024.12.4",
    "trl==0.12.2",
    "transformers==4.46.3",
    "datasets==3.2.0",
    "wandb==0.18.7",
    "bitsandbytes==0.44.1",
    "peft==0.14.0",
    "accelerate==1.2.1",
]
quantize = [
    "autoawq==0.2.7",
    "auto-gptq==0.7.1",
    "llama-cpp-python==0.3.4",
]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.hatch.build.targets.wheel]
packages = ["src/coderev"]
